# authenticator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  authenticator.code-workspace
.github/workflows/: main.yml
src/: main.rs
src/core/: mod.rs  passwordfile.rs
