[package]
name = "authenticator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.1"
hex = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
clap = { version = "3.0.13", features = ["derive"] }